--- a/TestXmlContainer/ivy.xml
+++ b/TestXmlContainer/ivy.xml
@@ -15,8 +15,13 @@
 		<!-- A configuration used in compilation of server side classes only.
 			Should be deployed to the server -->
 		<conf name="nodeploy" />
+		
 	</configurations>
+	
 	<dependencies defaultconf="default" defaultconfmapping="default->default">
+	<!--The XmlContainer Vaadin addon--> 
+	<dependency org="com.vaadin.tunis.saif.xmlcontainer" name="XmlContainer" rev="1.0.0" />
+	
 		<!-- The core server part of Vaadin -->
 		<dependency org="com.vaadin" name="vaadin-server" rev="&vaadin.version;" />
 
